<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/activity_fragment" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_name2"
        fab:fab_addButtonColorNormal="#0c16d2"
        fab:fab_addButtonColorPressed="#11deca"
        fab:fab_addButtonPlusIconColor="#FFFFFF"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_transfer"
            fab:fab_colorNormal="#f1d906"
            fab:fab_colorPressed="#ec810f"
            fab:fab_size="normal"
            fab:fab_title="@string/dialog_title_add_transfer"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_outcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_outcom"
            fab:fab_colorNormal="#f20e06"
            fab:fab_colorPressed="#ec810f"
            fab:fab_size="normal"
            fab:fab_title="@string/dialog_title_add_outcom"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_income"
            fab:fab_colorNormal="#008f96"
            fab:fab_colorPressed="#ec810f"
            fab:fab_size="normal"
            fab:fab_title="@string/dialog_title_add_incom"/>


    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>
