<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.OpeationsListActivity">

   <!-- <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>


<!--        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_operations"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabIndicatorHeight="5dp"
            app:tabIndicatorColor="@android:color/background_light"
            app:tabSelectedTextColor="@android:color/background_light"
            app:tabTextColor="@android:color/background_dark"
            app:layout_scrollFlags="scroll|enterAlways"
            />-->

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal|center_vertical"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/tab_day"
            android:id="@+id/tvTabDay"
            android:drawableBottom="@drawable/selector_tab_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tab_week"
            android:id="@+id/tvTabWeek"
            android:drawableBottom="@drawable/selector_tab_primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tab_month"
            android:id="@+id/tvTabMonth"
            android:drawableBottom="@drawable/selector_tab_primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:clickable="true"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tab_year"
            android:id="@+id/tvTabYear"
            android:drawableBottom="@drawable/selector_tab_primary"/>

    </LinearLayout>

        <TextView
            android:id="@+id/tvDateListOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="29.09.15"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="16dp"/>


        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <include layout="@layout/activity_fragment" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_name2" />

</android.support.design.widget.CoordinatorLayout>
